# VideoShare

./: .env.example  .gitignore  RASPBERRY.md  README.md  pyproject.toml  requirements.txt  servicio
bot/: __init__.py  auth.py  cache.py  config.py  downloader.py  formatting.py  handlers.py  main.py  url_normalizer.py
scripts/: diagnose-ytdlp.sh  install-raspi.sh  run.sh  update-ytdlp.sh
systemd/: videoshare-bot.service
tests/: test_cache.py  test_config_auth.py  test_downloader.py  test_formatting.py  test_handlers.py  test_scripts.py  test_url_normalizer.py
