[project]
name = "videoshare-bot"
version = "0.1.0"
description = "Telegram bot that downloads public social videos and sends them back with metadata."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "python-dotenv>=1.0.1",
    "python-telegram-bot>=21.6,<22",
    "yt-dlp>=2025.1.15",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
]

[project.scripts]
videoshare-bot = "bot.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["bot"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
